# aoc-2020

./: Cargo.toml  README.md
benches/: day_10_bench.rs  day_11_bench.rs  day_12_bench.rs  day_13_bench.rs  day_14_bench.rs  day_15_bench.rs  day_16_bench.rs  day_17_bench.rs  day_18_bench.rs  day_19_bench.rs  day_1_bench.rs  day_20_bench.rs  day_21_bench.rs  day_22_bench.rs  day_23_bench.rs  day_24_bench.rs  day_25_bench.rs  day_2_bench.rs  day_3_bench.rs  day_4_bench.rs  day_5_bench.rs  day_6_bench.rs  day_7_bench.rs  day_8_bench.rs  day_9_bench.rs  my_benchmark.rs  tmp.el
src/: 12_bb_gen.py  12_rules.txt  9_test.txt  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  helper.rs  lib.rs  main.rs  plot.py
