[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Ricardo Iglesias"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

# Benchmarking. Uncomment and run "cargo bench" to see benchmark

# [[bench]]
# name = "day_1_bench"
# harness = false

# [[bench]]
# name = "day_2_bench"
# harness = false

# [[bench]]
# name = "day_3_bench"
# harness = false

# [[bench]]
# name = "day_4_bench"
# harness = false

# [[bench]]
# name = "day_5_bench"
# harness = false

# [[bench]]
# name = "day_6_bench"
# harness = false

# [[bench]]
# name = "day_7_bench"
# harness = false

# [[bench]]
# name = "day_8_bench"
# harness = false

# [[bench]]
# name = "day_9_bench"
# harness = false

# [[bench]]
# name = "day_10_bench"
# harness = false

# [[bench]]
# name = "day_11_bench"
# harness = false

[[bench]]
name = "day_12_bench"
harness = false

# [[bench]]
# name = "day_13_bench"
# harness = false

# [[bench]]
# name = "day_14_bench"
# harness = false

# [[bench]]
# name = "day_15_bench"
# harness = false

# [[bench]]
# name = "day_16_bench"
# harness = false

# [[bench]]
# name = "day_17_bench"
# harness = false

# [[bench]]
# name = "day_18_bench"
# harness = false

# [[bench]]
# name = "day_19_bench"
# harness = false

# [[bench]]
# name = "day_20_bench"
# harness = false

# [[bench]]
# name = "day_21_bench"
# harness = false

# [[bench]]
# name = "day_22_bench"
# harness = false

# [[bench]]
# name = "day_23_bench"
# harness = false

# [[bench]]
# name = "day_24_bench"
# harness = false
